--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <button  id="connectTelegram">
-           <span class="telegram" >Connect Telegram </span>
+           <a href="https://web.telegram.org/" class="telegram" >Connect Telegram </a>
         </button>
         <label class="switch">
           <input type="checkbox" id="modeToggle" />
